--- a/new TNCN/QuanLyThue/pages/truong-phong/annual-tax-report.html
+++ b/new TNCN/QuanLyThue/pages/truong-phong/annual-tax-report.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Trưởng Phòng</title>
+    <title>Xem Quyết Toán Thuế Cuối Năm</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/navbar.css">
+
+
 </head>
 
 <body>
@@ -52,16 +54,25 @@
 
     <main class="main-content">
         <header class="top-bar">
-            <h1>Dashboard Trưởng Phòng</h1>
+            <h1>Xem Quyết Toán Thuế Cuối Năm</h1>
         </header>
 
         <div class="container">
-            <h2>Chức năng</h2>
-            <p>Chọn chức năng từ menu bên trái để quản lý nhân viên và xem thông tin liên quan.</p>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Phòng Ban</th>
+                        <th>Tổng Thuế Cuối Năm</th>
+                    </tr>
+                </thead>
+                <tbody id="annualTaxReportTableBody">
+                    <!-- Dữ liệu quyết toán thuế cuối năm sẽ được thêm vào đây -->
+                </tbody>
+            </table>
         </div>
     </main>
 
-    <script src="../../js/dashboard.js"></script>
+    <script src="../../js/annual-tax-report.js"></script>
 </body>
 
 </html>
