--- a/new TNCN/QuanLyThue/pages/truong-phong/profile.html
+++ b/new TNCN/QuanLyThue/pages/truong-phong/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Trưởng Phòng</title>
+    <title>Thông Tin Cá Nhân</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/navbar.css">
@@ -52,16 +52,30 @@
 
     <main class="main-content">
         <header class="top-bar">
-            <h1>Dashboard Trưởng Phòng</h1>
+            <h1>Thông Tin Cá Nhân</h1>
         </header>
 
-        <div class="container">
-            <h2>Chức năng</h2>
-            <p>Chọn chức năng từ menu bên trái để quản lý nhân viên và xem thông tin liên quan.</p>
+        <div class="container profile-container">
+            <form id="profileForm" class="profile-form">
+                <div class="form-group">
+                    <label>Họ và Tên:</label>
+                    <input type="text" id="fullName" class="form-control" readonly>
+                </div>
+                <div class="form-group">
+                    <label>Email:</label>
+                    <input type="email" id="email" class="form-control" required readonly>
+                </div>
+                <div class="form-group">
+                    <label>Số Điện Thoại:</label>
+                    <input type="tel" id="phone" class="form-control" required readonly>
+                </div>
+                <button type="button" class="btn btn-warning" id="editBtn">Chỉnh sửa</button>
+                <button type="submit" class="btn btn-success" style="display: none;">Lưu thay đổi</button>
+            </form>
         </div>
     </main>
 
-    <script src="../../js/dashboard.js"></script>
+    <script src="../../js/profile-management.js"></script>
 </body>
 
 </html>
