--- a/new TNCN/QuanLyThue/index.html
+++ b/new TNCN/QuanLyThue/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <script src="js/auth.js"></script>
+    <script src="./js/auth.js"></script>
 </body>
 
 </html>
