--- a/new TNCN/QuanLyThue/pages/nhan-vien/dashboard.html
+++ b/new TNCN/QuanLyThue/pages/nhan-vien/dashboard.html
@@ -4,100 +4,181 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Nhân Viên</title>
+    <title>Trang Chủ - Nhân Viên</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/dashboard.css">
+    <link rel="stylesheet" href="../../css/navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        .dashboard-card {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+            transition: transform 0.3s ease;
+        }
+
+        .dashboard-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .card-icon {
+            font-size: 2.5rem;
+            margin-bottom: 15px;
+            color: #3498db;
+        }
+
+        .quick-actions {
+            margin-top: 30px;
+        }
+
+        .action-card {
+            background: #f8f9fa;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 15px;
+            border-left: 4px solid #3498db;
+            transition: all 0.3s ease;
+        }
+
+        .action-card:hover {
+            background: #e9ecef;
+            cursor: pointer;
+        }
+
+        .notification-list {
+            max-height: 300px;
+            overflow-y: auto;
+        }
+
+        .notification-item {
+            padding: 10px;
+            border-bottom: 1px solid #eee;
+            transition: background-color 0.3s ease;
+        }
+
+        .notification-item:hover {
+            background-color: #f8f9fa;
+        }
+
+        .notification-item .date {
+            font-size: 0.85rem;
+            color: #6c757d;
+        }
+
+        .welcome-section {
+            background: linear-gradient(135deg, #3498db, #2980b9);
+            color: white;
+            padding: 30px;
+            border-radius: 8px;
+            margin-bottom: 30px;
+        }
+
+        .stat-value {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #2c3e50;
+        }
+
+        .stat-label {
+            color: #7f8c8d;
+            font-size: 0.9rem;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- Thanh điều hướng -->
     <nav class="sidebar">
-        <div class="user-info">
-            <img src="../../assets/images/avatar.png" alt="Avatar" class="avatar">
-            <h3 id="userName">Nguyễn Văn A</h3>
-            <p>Nhân viên</p>
+        <div class="user-info text-center">
+            <h3>Nhân viên</h3>
+            <p id="employeeName">Chào mừng bạn!</p>
         </div>
-
         <ul class="nav-links">
-            <li class="active">
-                <a href="dashboard.html">
-                    <span>Trang chủ</span>
-                </a>
-            </li>
-            <li>
-                <a href="profile.html">
-                    <span>Thông tin cá nhân</span>
-                </a>
-            </li>
-            <li>
-                <a href="salary-and-tax-report.html">
-                    <span>Xem lương và Thuế TNCN</span>
-                </a>
-            </li>
-            <li>
-                <a href="tax-report.html">
-                    <span>Quyết toán thuế TNCN</span>
-                </a>
-            </li>
-            <li>
-                <a href="tax-calculator.html">
-                    <span>Thử Thuế TNCN</span>
-                </a>
-            </li>
-            <li>
-                <a href="#" id="logoutBtn">
-                    <span>Đăng xuất</span>
-                </a>
-            </li>
+            <li><a href="dashboard.html" class="active"><span>Trang chủ</span></a></li>
+            <li><a href="salary-and-tax-report.html"><span>Xem lương và thuế TNCN</span></a></li>
+            <li><a href="annual-tax-report.html"><span>Xem quyết toán thuế thu nhập cả năm</span></a></li>
+            <li><a href="profile.html"><span>Thông tin cá nhân</span></a></li>
+            <li><a href="tax-calculator.html" class=""><span>Tính thử thuế TNCN</span></a></li>
+            <li><a href="../../index.html" id="logoutBtn"><span>Đăng xuất</span></a></li>
         </ul>
     </nav>
 
-    <!-- Nội dung chính -->
     <main class="main-content">
-        <header class="top-bar">
-            <h1>Trang Chủ</h1>
-            <div class="user-menu">
-                <span id="currentDate"></span>
-            </div>
-        </header>
+        <div class="d-block d-md-none">
+            <button id="toggleMenu" class="btn btn-primary mb-3">
+                <i class="fas fa-bars"></i>
+            </button>
+        </div>
 
-        <div class="dashboard-content">
+        <div class="welcome-section">
+            <h2><i class="fas fa-home"></i> Trang Chủ</h2>
+            <p class="mb-0">Chào mừng bạn đến với hệ thống quản lý thuế thu nhập cá nhân</p>
+        </div>
+
+        <div class="container">
             <!-- Thống kê tổng quan -->
-            <div class="stats-container">
-                <div class="stat-box">
-                    <h3>Lương tháng này</h3>
-                    <p class="amount">15,000,000 VNĐ</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="dashboard-card text-center">
+                        <i class="fas fa-money-bill-wave card-icon"></i>
+                        <h3 class="stat-value" id="totalSalary">0 VNĐ</h3>
+                        <p class="stat-label">Thu nhập tháng này</p>
+                    </div>
                 </div>
-                <div class="stat-box">
-                    <h3>Thuế TNCN</h3>
-                    <p class="amount">1,500,000 VNĐ</p>
+                <div class="col-md-4">
+                    <div class="dashboard-card text-center">
+                        <i class="fas fa-file-invoice-dollar card-icon"></i>
+                        <h3 class="stat-value" id="totalTax">0 VNĐ</h3>
+                        <p class="stat-label">Thuế TNCN tháng này</p>
+                    </div>
                 </div>
-                <div class="stat-box">
-                    <h3>Bảo hiểm</h3>
-                    <p class="amount">750,000 VNĐ</p>
+                <div class="col-md-4">
+                    <div class="dashboard-card text-center">
+                        <i class="fas fa-users card-icon"></i>
+                        <h3 class="stat-value" id="dependentCount">0</h3>
+                        <p class="stat-label">Người phụ thuộc</p>
+                    </div>
                 </div>
             </div>
 
-            <!-- Thông báo mới -->
-            <div class="notifications">
-                <h2>Thông Báo Mới</h2>
-                <div class="notification-list">
-                    <div class="notification-item">
-                        <h4>Bảng lương tháng 3/2024</h4>
-                        <p>Bảng lương đã được cập nhật. Vui lòng kiểm tra.</p>
-                        <span class="date">15/03/2024</span>
+            <!-- Truy cập nhanh và thông báo -->
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <div class="dashboard-card">
+                        <h4><i class="fas fa-bolt"></i> Truy cập nhanh</h4>
+                        <div class="quick-actions">
+                            <div class="action-card" onclick="window.location.href='salary-and-tax-report.html'">
+                                <h5><i class="fas fa-file-alt"></i> Xem báo cáo lương</h5>
+                                <p class="mb-0">Xem chi tiết lương và thuế TNCN của bạn</p>
+                            </div>
+                            <div class="action-card" onclick="window.location.href='tax-report.html'">
+                                <h5><i class="fas fa-calculator"></i> Xem quyết toán thuế</h5>
+                                <p class="mb-0">Xem báo cáo quyết toán thuế TNCN</p>
+                            </div>
+                            <div class="action-card" onclick="window.location.href='profile.html'">
+                                <h5><i class="fas fa-user-edit"></i> Cập nhật thông tin</h5>
+                                <p class="mb-0">Cập nhật thông tin cá nhân của bạn</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="notification-item">
-                        <h4>Cập nhật thông tin BHXH</h4>
-                        <p>Vui lòng cập nhật thông tin BHXH trước ngày 20/03/2024</p>
-                        <span class="date">10/03/2024</span>
+                </div>
+                <div class="col-md-6">
+                    <div class="dashboard-card">
+                        <h4><i class="fas fa-bell"></i> Thông báo mới</h4>
+                        <div class="notification-list" id="notificationList">
+                            <!-- Thông báo sẽ được thêm bằng JavaScript -->
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
 
-    <script src="../../js/dashboard.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../../js/dashboard-employee.js"></script>
 </body>
 
 </html>
