--- a/new TNCN/QuanLyThue/pages/truong-phong/employee-management.html
+++ b/new TNCN/QuanLyThue/pages/truong-phong/employee-management.html
@@ -4,10 +4,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản Lý Nhân Viên</title>
+    <title>Quản Lý Nhân Viên - Phòng Kế Toán</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        .department-info {
+            background: #f8f9fa;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            border-left: 4px solid #007bff;
+        }
+
+        .department-info h4 {
+            color: #2c3e50;
+            margin-bottom: 5px;
+        }
+
+        .department-info p {
+            color: #7f8c8d;
+            margin-bottom: 0;
+        }
+
+        .table thead th {
+            background-color: #34495e;
+            color: white;
+            border-color: #2c3e50;
+        }
+
+        .table-striped tbody tr:nth-of-type(odd) {
+            background-color: rgba(0, 123, 255, 0.05);
+        }
+
+        .badge-success {
+            background-color: #2ecc71;
+        }
+
+        .badge-danger {
+            background-color: #e74c3c;
+        }
+
+        .btn-primary {
+            background-color: #3498db;
+            border-color: #3498db;
+        }
+
+        .btn-primary:hover {
+            background-color: #2980b9;
+            border-color: #2980b9;
+        }
+
+        .modal-header {
+            background-color: #3498db;
+            color: white;
+        }
+
+        .modal-header .close {
+            color: white;
+        }
+
+        .form-group label {
+            color: #2c3e50;
+            font-weight: 500;
+        }
+
+        .top-bar {
+            background-color: #34495e;
+            color: white;
+            padding: 15px 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+
+        .action-buttons {
+            white-space: nowrap;
+        }
+
+        .table td {
+            vertical-align: middle;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #f5f6fa;
+        }
+
+        .top-bar {
+            margin-bottom: 30px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .container {
+            padding: 0 30px;
+        }
+
+        .department-info {
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+        }
+
+        .table-responsive {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 0 15px;
+            }
+
+            .department-info {
+                margin: 15px;
+            }
+
+            .table-responsive {
+                margin: 15px;
+            }
+        }
+
+        .modal-dialog {
+            max-width: 800px;
+        }
+
+        .modal-content {
+            border-radius: 8px;
+        }
+
+        .modal-body {
+            padding: 25px;
+        }
+    </style>
 </head>
 
 <body>
@@ -17,19 +147,15 @@
             <p>Chào mừng bạn!</p>
         </div>
         <ul class="nav-links">
+            <li><a href="dashboard.html"><span>Trang chủ</span></a></li>
             <li>
-                <a href="employee-management.html">
+                <a href="employee-management.html" class="active">
                     <span>Quản lý nhân viên</span>
                 </a>
             </li>
             <li>
                 <a href="salary-report.html">
                     <span>Xem lương và thuế TNCN</span>
-                </a>
-            </li>
-            <li>
-                <a href="tax-report.html">
-                    <span>Xem quyết toán thuế TNCN</span>
                 </a>
             </li>
             <li>
@@ -51,30 +177,118 @@
     </nav>
 
     <main class="main-content">
+        <div class="d-block d-md-none">
+            <button id="toggleMenu" class="btn btn-primary mb-3">
+                <i class="fas fa-bars"></i>
+            </button>
+        </div>
         <header class="top-bar">
-            <h1>Quản Lý Nhân Viên</h1>
+            <h1><i class="fas fa-users"></i> Quản Lý Nhân Viên</h1>
         </header>
 
-        <div class="container">
-            <button class="btn btn-primary" id="addEmployeeBtn">Thêm Nhân Viên</button>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Mã Nhân Viên</th>
-                        <th>Họ và Tên</th>
-                        <th>Email</th>
-                        <th>Số Điện Thoại</th>
-                        <th>Chức Năng</th>
-                    </tr>
-                </thead>
-                <tbody id="employeeTableBody">
-                    <!-- Dữ liệu nhân viên sẽ được thêm vào đây -->
-                </tbody>
-            </table>
+        <div class="container mt-4">
+            <div class="department-info">
+                <h4><i class="fas fa-building"></i> Phòng Kế Toán</h4>
+                <p>Quản lý thông tin nhân viên và báo cáo thuế</p>
+            </div>
+
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h2>Danh sách nhân viên</h2>
+                <button class="btn btn-primary" id="addEmployeeBtn">
+                    <i class="fas fa-plus"></i> Thêm Nhân Viên
+                </button>
+            </div>
+
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Mã NV</th>
+                            <th>Họ và Tên</th>
+                            <th>Email</th>
+                            <th>Số Điện Thoại</th>
+                            <th>Địa Chỉ</th>
+                            <th>Mã Số Thuế</th>
+                            <th>Trạng Thái</th>
+                            <th class="text-center">Thao Tác</th>
+                        </tr>
+                    </thead>
+                    <tbody id="employeeTableBody">
+                        <!-- Dữ liệu sẽ được thêm vào đây bằng JavaScript -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Modal Chỉnh Sửa Nhân Viên -->
+        <div class="modal fade" id="editEmployeeModal" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">
+                            <i class="fas fa-user-edit"></i> Chỉnh Sửa Thông Tin Nhân Viên
+                        </h5>
+
+                    </div>
+                    <div class="modal-body">
+                        <form id="editEmployeeForm">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label><i class="fas fa-id-card"></i> Mã nhân viên</label>
+                                        <input type="text" class="form-control" id="editEmployeeId" readonly>
+                                    </div>
+                                    <div class="form-group">
+                                        <label><i class="fas fa-user"></i> Họ và Tên</label>
+                                        <input type="text" class="form-control" id="editName" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label><i class="fas fa-envelope"></i> Email</label>
+                                        <input type="email" class="form-control" id="editEmail" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label><i class="fas fa-phone"></i> Số Điện Thoại</label>
+                                        <input type="tel" class="form-control" id="editPhone" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label><i class="fas fa-map-marker-alt"></i> Địa Chỉ</label>
+                                        <input type="text" class="form-control" id="editAddress" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label><i class="fas fa-file-invoice"></i> Mã Số Thuế</label>
+                                        <input type="text" class="form-control" id="editTaxId">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+
+                        <button type="button" class="btn btn-primary" id="saveEditBtn">
+                            <i class="fas fa-save"></i> Lưu Thay Đổi
+                        </button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                            <i class="fas fa-times"></i> Đóng
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
+    <!-- Thêm các script cần thiết -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="../../js/employee-management.js"></script>
+    <script>
+        document.getElementById('toggleMenu')?.addEventListener('click', function () {
+            document.querySelector('.sidebar').classList.toggle('active');
+            document.querySelector('.main-content').classList.toggle('shifted');
+        });
+    </script>
 </body>
 
 </html>
